Update .gitignore to ignore .env, node_modules, and other local files

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@
 /.bundle
 
 # Ignore all environment files (except templates).
-/.env*
+/.env
+/.env.local
+/.env.development
+/.env.test
+/.env.production
 !/.env*.erb
 
 # Ignore all logfiles and tempfiles.
@@ -29,14 +33,20 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+# Ignore compiled assets.
 /public/assets
 
-# Ignore master key for decrypting credentials and more.
+# Ignore Rails credentials (you use .env for secrets).
 /config/master.key
+/config/credentials.yml.enc
 
-# Ignore .env file containing credentials.
-.env*
+# Ignore JavaScript dependencies.
+/node_modules/
 
-# Ignore Mac and Linux file system files
+# Ignore lock files (optional — keep one if your team uses it consistently)
+yarn.lock
+package-lock.json
+
+# Ignore macOS and Linux system files
 *.swp
 .DS_Store
